--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=${SHARE_IT_GATEWAY_PORT}
+server.port=${SHARE_IT_GATEWAY_PORT:8080}
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
-shareit-server.url=http://${SHARE_IT_SERVER_HOST}:${SHARE_IT_SERVER_PORT}
+shareit-server.url=http://${SHARE_IT_SERVER_HOST:localhost}:${SHARE_IT_SERVER_PORT:8081}
 shareit-server.uri.path.user=/users
 shareit-server.uri.path.item=/items
 shareit-server.uri.path.booking=/bookings
