--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-server.port=${SHARE_IT_SERVER_PORT}
+server.port=${SHARE_IT_SERVER_PORT:8081}
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 logging.level.org.springframework.orm.jpa=INFO
@@ -9,9 +8,9 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ShareItDB}
+spring.datasource.username=${POSTGRES_USER:ShareItDeveloper}
+spring.datasource.password=${POSTGRES_PASSWORD:ShareItDevelop}
 #---
 spring.config.activate.on-profile=ci,test
 server.port=8080
